--- a/style.css
+++ b/style.css
@@ -1,9 +1,22 @@
+body{
+    background-image: url(images/galaxy.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
+}
+#main-container{
+    background:rgba(245,245,245,.5);
+    padding-bottom: 10px;
+    margin-top:10px;
+}
+.card-deck{
+    padding:0px 10px 10px;
+}
 .auth-img{
     height: 60%;
     width: 40%;
 }
 .navbar-brand{
-    font-family: 'Indie Flower', cursive !important;
+    font-family: 'Indie Flower', cursive;
 }
 #card-body-4,#card-body-5,#card-body-6{
     width: 220px;
@@ -19,4 +32,17 @@
 #card-6{
     margin-right: 0px;
     margin-left: 23px;
+}
+#linkedIn{
+    height:40%!important;
+    width: 60% !important;
+}
+#contact{
+    text-align: center;
+    
+}
+h1{
+    font-family: 'Kalam', cursive;
+    color: whitesmoke;
+    text-shadow: 2px 1px black;
 }
