--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 body{
-    background-image: url(images/galaxy.jpg);
-    background-repeat: no-repeat;
-    background-size:cover;
+    background-image: url(images/lilypads/lilypads.png);
+    height: 100%
 }
 #main-container{
-    background:rgba(245,245,245,.5);
+    background:rgba(245,245,245);
     padding-bottom: 15px;
     margin-top:10px;
 }
@@ -43,7 +42,7 @@ body{
 }
 h1{
     font-family: 'Kalam', cursive;
-    color: whitesmoke;
+    color: rgba(5, 117, 148, 1);
     text-shadow: 2px 1px black;
 }
 .auth-image{
