--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body{
     height: 60%;
     width: 40%;
 }
+
+img{
+    width:auto
+}
 .navbar-brand{
     font-family: 'Indie Flower', cursive;
 }
@@ -50,3 +54,5 @@ h1{
     height: 215px;
     width: 190px !important;
 }
+.card-img-top {height: 12rem;}
+
